--- a/styles.css
+++ b/styles.css
@@ -387,19 +387,19 @@
     height: 525px;
     width: 400px;
     border-radius: 4px;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url("https://github.com/ashuchauhan2/website/blob/main/images/pic3.jpg?raw=true");
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url('https://github.com/ashuchauhan2/website/blob/main/images/pic3.jpg?raw=true');
     background-size: cover;
     position: relative;
     color: #fff;
 }
 
 .services__card:nth-child(2) {
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url("https://github.com/ashuchauhan2/website/blob/main/images/maze.jpeg?raw=true");
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url('https://github.com/ashuchauhan2/website/blob/main/images/maze.jpeg?raw=true');
     background-size: inherit;
 }
 
 .services__card:nth-child(3) {
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url("https://github.com/ashuchauhan2/website/blob/main/images/image2text.png?raw=true");
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url('https://github.com/ashuchauhan2/website/blob/main/images/image2text.png?raw=true');
     background-size: contain;
 }
 
